--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-
+  <div id="main">
     <video autoplay muted id="myVideo">
         <source src="/video/video.webm" type="video/webm">
     </video>
@@ -229,7 +229,7 @@
             <div class="topApps">
                 <span>Top Apps</span>
                 <div class="Search-Apps-Icons" id="myICONS1"> 
-                    <a href="">
+                    <a href="/me">
                         <figure id="DefaultDisplaySearch">
                             <img src="img/icons/aboutme.png" alt="Windows 11 Edge icon">
                             <figcaption>About Me</figcaption>
@@ -443,6 +443,20 @@ PS C:\Users\ASUS\Desktop\Microsoft-Profile>
     </div>
 
 
+  </div> 
+  <div id="main7">
+    <p>::/Sorry to intrupt, but this portfollio is <br>good for desktop view</p>
+    <p>But also u can see from your phone</p> 
+    <p>click to continue</p> <br><br>
+     <a href="/mobile_view">
+        <button>
+            <p><b>Continue</b></p>
+        </button>
+     </a> <br> <br> 
+     <p><b>Made with ❤️ by </b></p>
+     <p><b>Shreyank</b></p>
+  </div>
+   
 </body>
 <script src="/javascripts/script.js"></script>
 
