--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -801,3 +801,62 @@ a{
   text-decoration: none;
   color: rgb(22, 22, 22);
 }
+
+
+#main7{ 
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(21, 21, 21); 
+  color: whitesmoke;
+ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+#main7 button{ 
+       padding: 7px 40px; 
+       color: white; 
+       border: 2px solid grey; 
+       background-color: transparent;
+}
+
+@media (max-width:600px) {
+
+
+  *{ 
+    margin:0; 
+    padding:0; 
+    box-sizing:border box 
+  }
+      html,body
+  { 
+        width:100% ;
+      height:100%;
+   }
+   #main7{ 
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(21, 21, 21); 
+    color: whitesmoke;
+    display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+      #main{ 
+        display: none;
+      } 
+      #main7{ 
+        display: flex;
+        flex-direction: column; 
+
+      }
+      #main7 button{ 
+        padding: 7px 40px; 
+        color: white; 
+        border: 2px solid grey; 
+        background-color: transparent;
+ }
+}
